2002-02-12  Lauris Kaplinski  <lauris@ximian.com>

	* applier.c (draw_disabled_message): Use g_object_unref for GdkGC
	(render_wallpaper): Use gdk_drawable_get_size
	(render_to_screen): Use gdk_get_default_root_window
	(wallpaper_full_cover_p): Ditto

	* preferences.c (read_color_from_string): Use gdk_rgb_find_color

	* applier.c (bg_applier_get_preview_widget): Use gnome_program_locate_file,
	replace GDK_ROOT_PARENT with gdk_get_default_root_window, deprecated
	gdk_window_* methods with gdk_drawable_* ones
	(bg_applier_get_preview_widget): Removed gtk_widget_push_visual,
	gtk_widget_pop_visual, use gtk_image instead of gtk_pixmap

2002-02-07  Richard Hestilow  <hestilow@ximian.com>

	* applier.c (BGApplierPrivate): Add "timeout" field.
	(bg_apply_cleanup_cb): Added.
	(bg_applier_apply_prefs): Add/reset timeout for cleanup function
	if we load a pixbuf.

2002-02-04  Lauris Kaplinski  <lauris@ximian.com>

	* preferences.c (read_wptype_from_string): Do not crash on NULL
	(read_orientation_from_string): Ditto

	* applier.c (bg_applier_dispose): Replace deprecated methods
	(draw_disabled_message): Use gtk_image instead of gtk_pixmap,
	replace deprecated methods
	(render_wallpaper): Replace deprecated methods

2002-01-13  Seth Nickell  <snickell@stanford.edu>

	reviewed by: <delete if not using a buddy>

	* Makefile.am:
	* applier.c: (bg_applier_apply_prefs),
	(bg_applier_get_preview_widget), (draw_disabled_message),
	(create_pixmap), (get_geometry):
	* preferences.c: (bg_preferences_load),
	(bg_preferences_merge_entry), (read_wptype_from_string),
	(read_orientation_from_string):
	* preferences.h:

2002-01-28  Richard Hestilow  <hestilow@ximian.com>

	* Makefile.am: Use libtool to create the static library, thus
	allowing shlibs to link to libbackground (needed for metatheme).

2002-01-10  Bradford Hovinen  <hovinen@ximian.com>

	Courtesy of Jean Schurger <jschurger@schurger.org>:
	* preferences.c (bg_preferences_merge_entry): Make sure the